--- a/package.xml
+++ b/package.xml
@@ -30,7 +30,18 @@
   <run_depend>image_transport</run_depend>
   <run_depend>message_runtime</run_depend>
 
+  <!-- temporary -->
+  <build_depend>message_filters</build_depend>
+  <build_depend>pcl_conversions</build_depend>
+  <build_depend>pcl_msgs</build_depend>
+  <build_depend>pcl_ros</build_depend>
+  <run_depend>message_filters</run_depend>
+  <run_depend>pcl_conversions</run_depend>
+  <run_depend>pcl_msgs</run_depend>
+  <run_depend>pcl_ros</run_depend>
+
   <export>
     <nodelet plugin="${prefix}/openni2_nodelets.xml"/>
+    <nodelet plugin="${prefix}/test/openni2_nodelet_suscriber.xml"/>
   </export>
 </package>
