Add sample subscriber With time synchronization, but without Nodelet (I had to simplify the code in order to get it compiled. Will Nodelet-ify this from now). ``` $ rosrun openni2_camera subscribe_node : [ INFO] [1507126032.461064344]: Diff now - Img: 0.076807410 [ INFO] [1507126032.495053833]: Diff now - PCL: 0.079305830 [ INFO] [1507126032.495084113]: Diff now - Img: 0.077343674 [ INFO] [1507126032.528167999]: Diff now - PCL: 0.079049259 [ INFO] [1507126032.528219801]: Diff now - Img: 0.076954285 [ INFO] [1507126032.560960769]: Diff now - PCL: 0.078470567 [ INFO] [1507126032.561005409]: Diff now - Img: 0.076234716 [ INFO] [1507126032.594458596]: Diff now - PCL: 0.078574365 [ INFO] [1507126032.594495312]: Diff now - Img: 0.076195584 [ INFO] [1507126032.627907699]: Diff now - PCL: 0.078670743 [ INFO] [1507126032.627954443]: Diff now - Img: 0.076154085 [ INFO] [1507126032.661331766]: Diff now - PCL: 0.078725031 [ INFO] [1507126032.661380893]: Diff now - Img: 0.076094153 [ INFO] [1507126032.694406735]: Diff now - PCL: 0.078424607 [ INFO] [1507126032.694439178]: Diff now - Img: 0.075724132 [ INFO] [1507126032.728122694]: Diff now - PCL: 0.078770580 [ INFO] [1507126032.728156155]: Diff now - Img: 0.075851841 [ INFO] [1507126032.761377057]: Diff now - PCL: 0.078637965 [ INFO] [1507126032.761414601]: Diff now - Img: 0.075591058 [ INFO] [1507126032.796005009]: Diff now - PCL: 0.079896988 [ INFO] [1507126032.796045273]: Diff now - Img: 0.076704150 [ INFO] [1507126032.828470971]: Diff now - PCL: 0.078993597 [ INFO] [1507126032.828516929]: Diff now - Img: 0.075653829 ```

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,8 @@ find_package(catkin REQUIRED COMPONENTS
   message_filters
   pcl_conversions
   pcl_msgs
-  pcl_ros)
+  pcl_ros
+  sensor_msgs)
 
 catkin_package(
   #INCLUDE_DIRS include
@@ -12,6 +13,7 @@ catkin_package(
     pcl_conversions
     pcl_msgs
     pcl_ros
+    sensor_msgs
 )
 
 include_directories(${catkin_INCLUDE_DIRS})
@@ -21,10 +23,14 @@ include_directories(${catkin_INCLUDE_DIRS})
 #target_link_libraries(sample_subscribe openni2_driver_lib ${catkin_LIBRARIES} ${Boost_LIBRARIES} )
 #add_dependencies(sample_subscribe ${PROJECT_NAME}_gencfg ${PROJECT_NAME}_generate_messages_cpp)
 
-add_library(openni2_subscriber_nodelet subscriber_nodelet.cpp)
-target_link_libraries(openni2_subscriber_nodelet openni2_driver_lib ${catkin_LIBRARIES} ${Boost_LIBRARIES} )
-add_dependencies(openni2_subscriber_nodelet ${PROJECT_NAME}_gencfg)
+#add_library(openni2_subscriber_nodelet subscriber_nodelet.cpp)
+#target_link_libraries(openni2_subscriber_nodelet openni2_driver_lib ${catkin_LIBRARIES} ${Boost_LIBRARIES} )
+#add_dependencies(openni2_subscriber_nodelet ${PROJECT_NAME}_gencfg)
 
 add_executable(subscribe_node subscriber_node.cpp)
 target_link_libraries(subscribe_node openni2_driver_lib ${catkin_LIBRARIES} ${Boost_LIBRARIES} )
 add_dependencies(subscribe_node ${PROJECT_NAME}_gencfg ${PROJECT_NAME}_generate_messages_cpp)
+
+add_executable(subscribe_node2 subscriber_node2.cpp)
+target_link_libraries(subscribe_node2 openni2_driver_lib ${catkin_LIBRARIES} ${Boost_LIBRARIES} )
+add_dependencies(subscribe_node2 ${PROJECT_NAME}_gencfg ${PROJECT_NAME}_generate_messages_cpp)
